--- a/frontespizi2-xetex.tex
+++ b/frontespizi2-xetex.tex
@@ -22,7 +22,7 @@
 \sedutadilaurea{Dicembre 2011}
 \candidata{Susanna Rossi}
 \secondacandidata{Laura Bruni}
-\logosede{logo_blu}
+\logosede{logoblu}
 \end{frontespizio}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Triennale con tesi
