--- a/frontespizi3-xetex.tex
+++ b/frontespizi3-xetex.tex
@@ -20,7 +20,7 @@
 \sedutadilaurea{Dicembre 2111}
 \candidata{Susanna Rossi}
 \secondacandidata{Laura Bruni}
-\logosede{logo_blu}
+\logosede{logoblu}
 \end{frontespizio}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Dottorato/classica
